<resources>
    <string name="app_name">Belajar Braille Al-Qur\'an</string>
    <string name="menu_1">1</string>
    <string name="menu_2">2</string>
    <string name="menu_3">3</string>
    <string name="menu_4">4</string>
    <string name="menu_5">5</string>
    <string name="menu_6">6</string>

    <string name="voice_search">Penelusuran Suara</string>

    <string name="braille_dots">Keterangan nomor titik pembentuk simbol</string>

    <string name="exercise_braille_merge_desc">Level 6. Menu Latihan Penggabungan Braille Hijaiyah dengan Tanda Baca.</string>
    <string name="exercise_braille_punctuation_desc">Level 4. Menu Latihan Braille Tanda Baca.</string>
    <string name="exercise_braille_hijaiyah_desc">Level 2. Menu Latihan Braille Hijaiyah.</string>

    <string name="learn_punctuation_braille_desc">Level 3. Menu Belajar Braille Tanda Baca.</string>
    <string name="learn_braille_merge_desc">Level 5. Menu Belajar Penggabungan Braille Hijaiyah dengan Tanda Baca.</string>
    <string name="learn_hijaiyah_braille_desc">Level 1. Menu Belajar Braille Hijaiyah.</string>

    <string name="main_guide">Geser untuk memilih menu.</string>
    <string name="learn_hijaiyah_guide">Geser untuk memilih simbol hijaiyah.</string>
    <string name="learn_braille_merge_guide">Geser untuk memilih simbol.</string>
    <string name="learn_punctuation_guide">Geser untuk memilih simbol tanda baca.</string>
    <string name="hijaiyah_detail_guide">Geser untuk menelusuri titik-titik pembentuk simbol hijaiyah ini.</string>
    <string name="punctuation_detail_guide">Geser untuk menelusuri titik-titik pembentuk simbol tanda baca ini.</string>
    <string name="braillemerge_detail_guide">Geser untuk menelusuri titik-titik pembentuk simbol ini.</string>

    <string name="find_symbol_reading_law">CARI HUKUM BACAAN SIMBOL</string>

    <string name="spell">cara baca</string>

    <string name="exercise_question">Titik braille nomor berapa saja kah yang membentuk simbol tersebut?
        Aktifkan tombol pesan suara untuk menjawab.</string>

    <string name="next_hijaiyah_symbol">LATIHAN SIMBOL HIJAIYAH LAIN</string>
    <string name="next_puctuation_symbol">LATIHAN SIMBOL TANDA BACA LAIN</string>
    <string name="next_braille_merge_symbol">LATIHAN SIMBOL GABUNGAN LAIN</string>

    <string name="search_description">Cari simbol..</string>

    <string-array name="themes">
        <item>Tema Default</item>
        <item>Tema Hijau</item>
    </string-array>

    <string name="prefs_theme_key">theme</string>

    <string name="voice_message">Pesan Suara</string>

</resources>
