<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".main.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:focusable="true"
        android:background="?attr/colorPrimary"
        android:theme="@style/MyActionBarTheme"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="id.or.codelabs.belajarbraille.MainActivity">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/main_cardview_learn_hijaiyah"
                    android:layout_width="158dp"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="?attr/colorPrimaryDark"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="1dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    android:contentDescription="@string/learn_hijaiyah_braille_desc">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/main_textview_level_learn_hijaiyah"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_1"
                            android:textColor="@android:color/white"
                            android:textSize="48sp"
                            android:layout_centerHorizontal="true"/>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/main_cardview_exercise_hijaiyah"
                    android:layout_width="158dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    app:cardBackgroundColor="?attr/colorPrimaryDark"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="1dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    android:contentDescription="@string/exercise_braille_hijaiyah_desc">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/main_textview_level_exercise_hijaiyah"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_2"
                            android:textColor="@android:color/white"
                            android:textSize="48sp"
                            android:layout_centerHorizontal="true"/>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <android.support.v7.widget.CardView
                android:id="@+id/main_cardview_learn_punctuation"
                android:layout_width="158dp"
                android:layout_height="match_parent"
                app:cardBackgroundColor="?attr/colorPrimaryDark"
                app:cardCornerRadius="0dp"
                app:cardElevation="1dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                android:contentDescription="@string/learn_punctuation_braille_desc">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/main_textview_level_learn_punctuation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_3"
                        android:textColor="@android:color/white"
                        android:textSize="48sp"
                        android:layout_centerHorizontal="true"/>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/main_cardview_exercise_punctuation"
                    android:layout_width="158dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    app:cardBackgroundColor="?attr/colorPrimaryDark"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="1dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    android:contentDescription="@string/exercise_braille_punctuation_desc">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/main_textview_level_exercise_punctuation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_4"
                            android:textColor="@android:color/white"
                            android:textSize="48sp"
                            android:layout_centerHorizontal="true"/>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/main_cardview_learn_braille_merge"
                    android:layout_width="158dp"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="?attr/colorPrimaryDark"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="1dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    android:contentDescription="@string/learn_braille_merge_desc">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/main_textview_level_learn_braille_merge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_5"
                            android:textColor="@android:color/white"
                            android:textSize="48sp"
                            android:layout_centerHorizontal="true"/>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/main_cardview_exercise_braille_merge"
                    android:layout_width="158dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    app:cardBackgroundColor="?attr/colorPrimaryDark"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="1dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    android:contentDescription="@string/exercise_braille_merge_desc">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/main_textview_level_exercise_braille_merge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_6"
                            android:textColor="@android:color/white"
                            android:textSize="48sp"
                            android:layout_centerHorizontal="true"/>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>

